--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@ limitations under the License.
   <groupId>de.codesourcery.scala</groupId>
   <packaging>jar</packaging>
   <artifactId>git-redmine-hook</artifactId>
-  <version>1.0.5</version>
+  <version>1.0.6</version>
   <name>git-redmine-hook</name>
   <description>A GIT pre-commit/post-receive hook that interacts with a Redmine issue tracking system</description>
 
@@ -100,6 +100,12 @@ limitations under the License.
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.1.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.3</version>
     </dependency>
 
     <dependency>
